# privateRAG

./: .env.example  .gitignore  History.md  PRD.md  README.md  RTM.md  SDS.md  TCC.md  TS.md  WBS.md  alembic.ini  concept.md  main.py  pyproject.toml
.claude/: settings.local.json
app/api/: deps.py
app/api/routes/: documents.py  models.py  rag.py  rules.py  topics.py
app/api/schemas/: __init__.py  document.py  model_registry.py  rag.py  topic.py
app/core/: app_state.py  config.py  logging.py  pipeline.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/providers/extractor/: base.py  chain.py  playwright_extractor.py  readability_extractor.py  trafilatura_extractor.py
app/providers/llm/: anthropic_adapter.py  base.py  google_adapter.py  ollama_adapter.py  openai_adapter.py
app/providers/search/: base.py  brave_adapter.py
app/scheduler/: jobs.py  scheduler.py
app/services/: archive_service.py  fetch_service.py  model_router.py  query_planner.py  rag_service.py  relevance_service.py  rule_engine.py  search_service.py  summary_service.py  topic_service.py  usage_service.py
config/: settings.yaml
scripts/: seed_models.py  setup.py
service/web/: package-lock.json  package.json
service/web/src/app/: globals.css  layout.tsx
service/web/src/app/chat/: page.tsx
service/web/src/app/documents/: page.tsx
service/web/src/app/documents/[id]/: page.tsx
service/web/src/app/schedule/: page.tsx
service/web/src/app/topics/: page.tsx
service/web/src/app/topics/[id]/: page.tsx
service/web/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  SourceCard.tsx
service/web/src/components/layout/: QueryProvider.tsx  Sidebar.tsx
service/web/src/components/topics/: RuleTable.tsx  TopicCard.tsx  TopicForm.tsx
service/web/src/components/ui/: card.tsx  dialog.tsx  select.tsx  textarea.tsx
service/web/src/lib/: api.ts  utils.ts
service/web/src/types/: api.ts
tests/: conftest.py
tests/api/: test_topics.py
tests/integration/: test_archive.py
tests/unit/services/: test_model_router.py  test_relevance_service.py  test_rule_engine.py  test_topic_service.py  test_usage_service.py
(+2 files in other folders)
